# othismos

./: .gitignore  AUDIT_v0.4.0.md  CHANGELOG.md  README.md  demo.py  glossary_short.md  pyproject.toml
art/: 01_THE_LONG_PUSH.md
ecology/: 01_ECONOMICS.md  02_THE_MOLT_CYCLE.md
essays/: 00_PHILOSOPHY.md  01_THE_ORIGIN.md  02_EVERYWHERE.md  03_THE_FOOL_AND_THE_WALL.md  04_THE_POPCORN_DIAGNOSTIC.md  05_NEGOTIATING_WITH_WALLS.md
examples/: llm_context_pressure.py
math/: 01_PRESSURE_MATH.md
metal/: 01_PRESSURE_AWARE_DESIGN.md  02_THE_THERMODYNAMIC_LULLABY.md
research/: 01_REAL_WORLD_APPLICATIONS.md  02_LIBRARY_DESIGN.md  03_THEORETICAL_FOUNDATIONS.md  04_ECOLOGY_AS_INFRASTRUCTURE.md  05_CODE_REVIEW.md  05_OPENCODE_CODE_REVIEW.md  06_MINIMAX_USER_JOURNEY.md
src/othismos/: __init__.py  cli.py  config.py  context_pressure.py  controller.py  diagnostics.py  ecology.py  integrations.py  llm.py  pandas_export.py  phases.py  pressure.py  protocols.py  serialization.py  viz.py
tests/: test_cli.py  test_context_pressure.py  test_controller.py  test_diagnostics.py  test_ecology.py  test_integrations.py  test_new_modules.py  test_phases.py  test_pressure.py  test_serialization.py
worldbuilding/: 01_KIMI_WORLD.md  02_SEEDMINI_DICTIONARY.md  03_GLM_TIDEPOOL.md  04_GLM_CALENDAR.md  05_THE_REEFS_MEMORY.md
