[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "othismos"
version = "0.4.0"
description = "The force a bounded system exerts against its bounds. The push IS the knowing."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "SuperInstance"}]
keywords = ["constraints", "pressure", "optimization", "bounded-systems", "phase-transitions", "molt-cycle"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
torch = ["torch>=2.0"]
viz = ["matplotlib>=3.7"]
pandas = ["pandas>=2.0"]
yaml = ["pyyaml>=6.0"]
all = ["matplotlib>=3.7", "pandas>=2.0", "pyyaml>=6.0"]

[project.scripts]
othismos = "othismos.cli:main"

[project.urls]
Homepage = "https://github.com/SuperInstance/othismos"
Repository = "https://github.com/SuperInstance/othismos"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
